@@ -2,9 +2,10 @@
 {
     using System.Windows;
     using System.Windows.Controls;
+    using Caliburn.Core;
+    using Caliburn.PresentationFramework;
     using Caliburn.Windsor;
     using Caliburn.Core.Configuration;
-    using Caliburn.PresentationFramework.Configuration;
     using Caliburn.PresentationFramework.Conventions;
     using Castle.Windsor;
 
