@@ -2,8 +2,9 @@
 {
     using System.Reflection;
     using System.Windows;
+    using Caliburn.Core;
     using Caliburn.Core.Configuration;
-    using Caliburn.PresentationFramework.Configuration;
+    using Caliburn.PresentationFramework;
 
     /// <summary>
     /// Interaction logic for App.xaml
