@@ -7,18 +7,18 @@
 
     public class ShowPopupResult : IResult
     {
-        public void Execute(IRoutedMessageWithOutcome message, IInteractionNode handlingNode)
+        public void Execute(ResultExecutionContext context)
         {
-            var source = (FrameworkElement)message.Source.UIElement;
+            var source = (FrameworkElement)context.Message.Source.UIElement;
             var popup = source.FindName("detailsPopup") as Popup;
 
             popup.IsOpen = true;
             popup.CaptureMouse();
             popup.Child.MouseLeave += (o, e) => popup.IsOpen = false;
 
-            Completed(this, null);
+            Completed(this, new ResultCompletionEventArgs());
         }
 
-        public event Action<IResult, Exception> Completed = delegate { };
+        public event EventHandler<ResultCompletionEventArgs> Completed = delegate { };
     }
 }
